# neurosync

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/defaults/: embedding_huggingface.json  embedding_openai.json  vector_store_faiss.json  vector_store_faiss_flat.json  vector_store_faiss_hnsw.json  vector_store_faiss_ivf.json  vector_store_qdrant.json
docker/airflow/: Dockerfile
docker/client-cli/: Dockerfile  requirements.txt
docker/neurosync-core/: Dockerfile  requirements.txt
docker/vector-store/: Dockerfile
docs/: full-pipeline-command.md
scripts/: setup.sh
src/neurosync/: __init__.py
src/neurosync/cli/: main.py
src/neurosync/cli/commands/: __init__.py  ingest.py  pipeline.py  process.py  serve.py  status.py  vector_store.py
src/neurosync/cli/utils/: validators.py
src/neurosync/core/: environment.py
src/neurosync/core/config/: settings.py  validation.py
src/neurosync/core/exceptions/: custom_exceptions.py
src/neurosync/core/logging/: __init__.py  logger.py
src/neurosync/ingestion/: __init__.py  manager.py
src/neurosync/ingestion/base/: __init__.py  connector.py
src/neurosync/ingestion/connectors/: __init__.py  api_connector.py  database_connector.py  file_connector.py
src/neurosync/orchestration/tasks/: pipeline_tasks.py
src/neurosync/pipelines/: embedding_pipeline.py  pipeline.py
src/neurosync/processing/: __init__.py  base.py  manager.py
src/neurosync/processing/chunking/: __init__.py  document_structure_chunker.py  hierarchical_chunker.py  recursive_chunker.py  semantic_chunker.py  sliding_window_chunker.py
src/neurosync/processing/embedding/: __init__.py  base.py  huggingface.py  manager.py  monitoring.py  openai.py
src/neurosync/processing/preprocessing/: __init__.py  cleaners.py  language_detector.py
src/neurosync/serving/api/: main.py  middleware.py  server.py
src/neurosync/serving/llm/: anthropic.py  base.py  cohere.py  gemini.py  huggingface.py  manager.py  openai.py  openrouter.py
src/neurosync/serving/rag/: cache.py  prompts.py  retriever.py
src/neurosync/serving/rag/templates/: rag_prompt.jinga
src/neurosync/storage/: __init__.py
temp-test/test-project/config/: pipeline.yaml
test_data/: api_samples.md  architecture_guide.md  user_guide.md
tests/fixtures/: conftest.py
tests/fixtures/sample_data/: test.csv  test.doc  test.json  test.txt
tests/unit/: test_base_connector.py  test_cli.py  test_ingestion.py  test_manager.py
tests/unit/cli/: test_cli.py  test_cli_process.py  test_pipeline_cli.py
tests/unit/llm/: test_base.py  test_manager.py
tests/unit/pipeline/: test_complete_pipeline.py
tests/unit/processing/: test_processing.py  test_processing_manager.py
tests/unit/processing/chunkers/: test_document_structure_chunker.py  test_hierarchical_chunker.py  test_recursive_chunker.py  test_semantic_chunker.py  test_sliding_window_chunker.py
