[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[project]
name = "neurosync"
version = "0.1.0"
description = "AI-Native ETL Pipeline for RAG and LLM Applications"
authors = [
    {name = "N R Navaneet", email = "navaneetnr@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "etl", "rag", "llm", "pipeline", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.0.0",
    "typer==0.9.0",
    "click>=8.1.7",
    "rich>=13.7.0",

    # Database and storage
    "sqlalchemy>=1.4,<2.0",
    "alembic==1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis==5.0.1",
    "celery==5.3.4",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.2",

    # AI and ML
    "torch>=2.1.1",
    "transformers>=4.35.2",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "langchain>=0.1.0",
    "openai==1.3.8",
    "accelerate>=0.30.1",
    "bitsandbytes>=0.42.0",
    "cohere>=4.38",
    "anthropic==0.25.4",
    "google-generativeai==0.3.2",

    # HTTP and async
    "httpx==0.25.2",
    "aiofiles==23.2.0",
    "python-multipart==0.0.6",
    "asyncio-throttle>=1.0.2",

    # Security and auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # Configuration and utilities
    "python-dotenv>=1.0.0",
    "pyyaml==6.0.1",
    "structlog==23.2.0",
    "types-requests>=2.31.0",
    "Jinja2==3.1.4",
    "starlette>=0.37.2",
    "pickle-mixin>=1.0.2",

    # Document processing
    "PyPDF2==3.0.1",
    "python-docx==1.1.0",
    "chardet==5.2.0",
    "python-magic==0.4.27",
    "beautifulsoup4==4.12.3",

    # NLP
    "spacy==3.7.4",
    "langdetect==1.0.9",
    "nltk>=3.9.1",

    # Vector stores
    "qdrant-client==1.9.0",

    # Database connectors
    "psycopg[binary]>=3.1.0",
    "aiomysql==0.2.0",
    "aiosqlite==0.19.0",
    "snowflake-connector-python>=3.6.0",
    "snowflake-sqlalchemy>=1.5.1",
    "google-cloud-bigquery>=3.15.0",
    "google-auth>=2.25.0",
    "redshift-connector>=2.0.915",
    "databricks-sql-connector>=2.9.3",
    "clickhouse-driver>=0.2.6",
    "cx-Oracle>=8.3.0",
    "pyodbc>=5.0.1",
    "types-aiofiles>=23.2.0",
    "types-redis>=4.6",
]

[project.urls]
"Homepage" = "https://github.com/nrnavaneet/neurosync"
"Documentation" = "https://github.com/nrnavaneet/neurosync/tree/main/docs"
"Repository" = "https://github.com/nrnavaneet/neurosync"
"Bug Tracker" = "https://github.com/nrnavaneet/neurosync/issues"
"Changelog" = "https://github.com/nrnavaneet/neurosync/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
]

[project.scripts]
neurosync = "neurosync.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/neurosync",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "neurosync.ingestion.connectors.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601", "B608", "B104", "B110", "B112"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
